--- a/Python tutorial.ipynb
+++ b/Python tutorial.ipynb
@@ -29,7 +29,7 @@
    "id": "8a3bb5fd",
    "metadata": {},
    "source": [
-    "Here we introduce basic notions of the programming language python, widely used by the astronomy community. We follow mostly the introductory book 'A whirlwind tour of Python' by Jake VanderPlas. When it comes to programming, browsing in search engines is extremely useful. If you have any questions on how to type certain commands, it's very likely someone had the same question before and posted it on online forums. Take advantage of thie virtual community! "
+    "Here we introduce basic notions of the programming language python, widely used by the astronomy community. We follow mostly the introductory book 'A whirlwind tour of Python' by Jake VanderPlas. When it comes to programming, browsing in search engines is extremely useful. If you have any questions on how to type certain commands, it's very likely someone had the same question before and posted it on online forums. Benefit of thie virtual community. "
    ]
   },
   {
