--- a/Python tutorial.ipynb
+++ b/Python tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e93e8a9b",
+   "id": "20ca9895",
    "metadata": {},
    "source": [
     "# Python tutorial"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "320f2620",
+   "id": "c8176d25",
    "metadata": {},
    "source": [
     "### Erik Meier & Brice-Olivier Demory"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00e77ad6",
+   "id": "eb630b3c",
    "metadata": {},
    "source": [
     "11.10.2023"
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a3bb5fd",
+   "id": "82a77314",
    "metadata": {},
    "source": [
-    "Here we introduce basic notions of the programming language python, widely used by the astronomy community. We follow mostly the introductory book 'A whirlwind tour of Python' by Jake VanderPlas. When it comes to programming, browsing in search engines is extremely useful. If you have any questions on how to type certain commands, it's very likely someone had the same question before and posted it on online forums. Benefit of thie virtual community. "
+    "Here we introduce basic notions of the programming language python, widely used by the astronomy community. We follow mostly the introductory book 'A whirlwind tour of Python' by Jake VanderPlas. When it comes to programming, browsing in search engines is extremely useful. If you have any questions on how to type certain commands, it's very likely someone had the same question before and posted it on online forums. Benefit of the virtual community. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "59d9c483",
+   "id": "03c4fd6f",
    "metadata": {},
    "source": [
     "First, let's introduce the concept of a module. Here we load basic modules used in a daily basis: numpy and matplotlib. The first is an efficient data storage, permits to create arrays (matrices) with values or data, as well as mathematical functions such as sin, cos, tan, exp, ... Matplotlib is used to create plots and figures in general. You can call the modules by typing the command \"import\" and the name of the module. The command \"as\" assigns a nickname to the module. Instead of using numpy by typing numpy, you type the nickname of your choice. It is custom to call numpy as np, while matplotlib.pyplot is called plt. "
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "169ffe29",
+   "id": "2d34119e",
    "metadata": {},
    "source": [
     "Essential modules are: numpy, pandas, matplotlib, scipy, to name a few. "
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "349d048e",
+   "id": "a2469b62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21eef1f0",
+   "id": "157b05eb",
    "metadata": {},
    "source": [
     "You can also use python as a calculator. "
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aa2e274",
+   "id": "b8a2a8db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b12db61e",
+   "id": "8b618822",
    "metadata": {},
    "source": [
     "Or create variables (very handy and used frequently)."
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a927e73",
+   "id": "1e4626e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e9f3bb3",
+   "id": "c7f6be64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "090a5b37",
+   "id": "d520e723",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd139dd2",
+   "id": "4f324467",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43982903",
+   "id": "e41b7f27",
    "metadata": {},
    "source": [
     "Lists and arrays are important concepts. Although they can look similar, they have different characteristics. Usually a list contains objects as strings. You cannot perform numerical computations on lists, while you can with arrays. It get's confusing for example by filling a list with arrays, since accessing to an array you can perfom computations with it but not on the list containing it. Let's create a list with random objects. To create a list, put your objects inside square brackets and separate each object by a comma. "
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9195f8a",
+   "id": "3c1a8dfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e175d6c",
+   "id": "d5eb6231",
    "metadata": {},
    "source": [
     "Our list consists of the string \"apple\", the integer 2 and the variable x we created previously. We assigned the list to a variable called \"list_1\". By typing the name of the variable in a cell, you can view the content of it."
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c12c9e2",
+   "id": "f97c8d3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "043a0031",
+   "id": "e3cb5d7c",
    "metadata": {},
    "source": [
     "To access a specific object, put a square bracket after the name of your list and put the number of entry you want. By construction, on python the first entry is represented by a zero, not one. Thus, if I want to access the object 'apple', I have to call the zeroth element. Let's do that:"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57f03a5a",
+   "id": "05c4b4c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd737529",
+   "id": "4f2867d1",
    "metadata": {},
    "source": [
     "Here's a powerful tool: Assigning variables of entries from a list:"
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "659f46f3",
+   "id": "da9ae189",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1042a227",
+   "id": "43aa4e9e",
    "metadata": {},
    "source": [
     "Now the variable y has the same value as the second entry in our list. The usefulness of this will be clear with practice. This time let's create an array. "
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2752ebe",
+   "id": "1ea45131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ad1cd46",
+   "id": "650a6c83",
    "metadata": {},
    "source": [
     "Note that the array has a list inside, but its properties are different. Now we can perform numerical manipulations on it. Let's get to the fun part and create a variable x (note that we already had a variable called x. This step will overwrite the previous value of x and replace with the new value(s)) with range between -10 and 10 with 100 elements, that is, we will get an array of elements starting at -10 and going all the way to 10 with 100 equally spaced elements. "
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdbe3818",
+   "id": "1b80bf26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b246684e",
+   "id": "33655466",
    "metadata": {},
    "source": [
     "Now let's define a quadratic function of x. "
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f1e95af",
+   "id": "7fe06302",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d7b7897",
+   "id": "d8556f4a",
    "metadata": {},
    "source": [
     "It should have as roots x_1 = 3 and x_2 = -2 (where the function intersects the x axis, where y has the value 0). To confirm this, let's plot the function using matplotlib."
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efdaf900",
+   "id": "221a6334",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "069cc703",
+   "id": "2a76e617",
    "metadata": {},
    "source": [
     "We can customise further:"
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78c74e27",
+   "id": "f7b7fda4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ad13d91",
+   "id": "85b3d4e8",
    "metadata": {},
    "source": [
     "### Exercise 1: Define multiple functions of your choice (linear, quadratic, trigonometric, exponential,...) and plot all in the same figure. "
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21fd42a0",
+   "id": "4a59a8e1",
    "metadata": {},
    "source": [
     "Conditional statements: If, elif and else"
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a08c61ba",
+   "id": "c2288d3f",
    "metadata": {},
    "source": [
     "for loops: Allow to execute certain pieces of code depending on some Boolean condition. "
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b5818cc",
+   "id": "6540f617",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14973309",
+   "id": "790ceb2d",
    "metadata": {},
    "source": [
     "while loops: interates until some condition is met. "
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6212e19d",
+   "id": "b975fb5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c139d06c",
+   "id": "3a4cebe8",
    "metadata": {},
    "source": [
     "### Exercise 2: Have a close look at the code below, especially in the output L. Try to explain what is going on. What is the code doing? "
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bed9030",
+   "id": "efb27db0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eadf1daf",
+   "id": "ca2de0fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94703e7b",
+   "id": "676bc3c3",
    "metadata": {},
    "source": [
     "We conclude this brief tutorial by introducing functions. These are defined with the \"def\" statement. As in mathematics, functions depend on arguments, but the power is that one can get the output of the function for any feeded argument. Below is a function that computes a linear function, where the arguments are the slope m and intercept b. "
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d75da358",
+   "id": "47999ab3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87e819c2",
+   "id": "6af6f843",
    "metadata": {},
    "source": [
     "Let's assign values, m=0.5, b=-2 and x to range between 0 and 10. "
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9e1e835",
+   "id": "cea55484",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e10b036",
+   "id": "8fdbf7ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5203e7b6",
+   "id": "4d4045c8",
    "metadata": {},
    "source": [
     "Or this can be done also like this:"
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ceb5ae64",
+   "id": "f7d2e622",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abb83a7c",
+   "id": "13d3701f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a3633d3",
+   "id": "51842ca5",
    "metadata": {},
    "source": [
     "That's it for now!"
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c9d4656",
+   "id": "1886ee77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a847fa5",
+   "id": "24ca13de",
    "metadata": {},
    "outputs": [],
    "source": [
